force-app/main/default/objects/Dealer_GST__c/Dealer_GST__c.object-meta.xml
<CustomObject>
    <label>Dealer GST report</label>
    <nameField>
        <displayFormat>Sales - {0000}</displayFormat>
        <label>Dealer records</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer GST reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>