force-app/main/default/objects/Dealer_GST__c/fields/B2B_category_type__c.field-meta.xml
<CustomField>
    <fullName>B2B_category_type__c</fullName>
    <label>B2B category type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>