force-app/main/default/objects/Dealer_GST__c/fields/Bill_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Name__c</fullName>
    <label>Bill To Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>