force-app/main/default/objects/Dealer_GST__c/fields/Bill_Type__c.field-meta.xml
<CustomField>
    <fullName>Bill_Type__c</fullName>
    <label>Bill Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>