force-app/main/default/objects/Dealer_GST__c/fields/Cess_amount__c.field-meta.xml
<CustomField>
    <fullName>Cess_amount__c</fullName>
    <label>Cess amount</label>
    <length>150</length>
    <type>Text</type>
</CustomField>