force-app/main/default/objects/Dealer_GST__c/fields/CGST_amount__c.field-meta.xml
<CustomField>
    <fullName>CGST_amount__c</fullName>
    <label>CGST amount</label>
    <length>150</length>
    <type>Text</type>
</CustomField>