force-app/main/default/objects/Dealer_GST__c/fields/Cust_Vend_Account__c.field-meta.xml
<CustomField>
    <fullName>Cust_Vend_Account__c</fullName>
    <label>Cust/Vend Account</label>
    <length>150</length>
    <type>Text</type>
</CustomField>