force-app/main/default/objects/Dealer_GST__c/fields/Customer_billing_name__c.field-meta.xml
<CustomField>
    <fullName>Customer_billing_name__c</fullName>
    <label>Customer billing name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>