force-app/main/default/objects/Dealer_GST__c/fields/Customer_PAN__c.field-meta.xml
<CustomField>
    <fullName>Customer_PAN__c</fullName>
    <label>Customer PAN</label>
    <length>150</length>
    <type>Text</type>
</CustomField>