force-app/main/default/objects/Dealer_GST__c/fields/Customer_Vendor_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>Customer_Vendor_GSTIN__c</fullName>
    <label>Customer/ Vendor GSTIN</label>
    <length>150</length>
    <type>Text</type>
</CustomField>