force-app/main/default/objects/Dealer_GST__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <label>Dealer</label>
    <length>150</length>
    <type>Text</type>
</CustomField>