force-app/main/default/objects/Dealer_GST__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <length>150</length>
    <type>Text</type>
</CustomField>