force-app/main/default/objects/Dealer_GST__c/fields/District_name__c.field-meta.xml
<CustomField>
    <fullName>District_name__c</fullName>
    <label>District name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>