force-app/main/default/objects/Dealer_GST__c/fields/Engine_Number__c.field-meta.xml
<CustomField>
    <fullName>Engine_Number__c</fullName>
    <label>Engine Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>