force-app/main/default/objects/Dealer_GST__c/fields/HSN_codes__c.field-meta.xml
<CustomField>
    <fullName>HSN_codes__c</fullName>
    <label>HSN codes</label>
    <length>150</length>
    <type>Text</type>
</CustomField>