force-app/main/default/objects/Dealer_GST__c/fields/IGST_amount__c.field-meta.xml
<CustomField>
    <fullName>IGST_amount__c</fullName>
    <label>IGST amount</label>
    <length>150</length>
    <type>Text</type>
</CustomField>