force-app/main/default/objects/Dealer_GST__c/fields/Is_Reverse_Charge_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Is_Reverse_Charge_Applicable__c</fullName>
    <label>Is Reverse Charge Applicable?</label>
    <length>150</length>
    <type>Text</type>
</CustomField>