force-app/main/default/objects/Dealer_GST__c/fields/Is_the_item_a_GOOD_G_or_SERVICE_S__c.field-meta.xml
<CustomField>
    <fullName>Is_the_item_a_GOOD_G_or_SERVICE_S__c</fullName>
    <label>Is the item a GOOD (G) or SERVICE (S)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>