force-app/main/default/objects/Dealer_GST__c/fields/Is_this_a_Bill_of_Supply__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Bill_of_Supply__c</fullName>
    <label>Is this a Bill of Supply?</label>
    <length>150</length>
    <type>Text</type>
</CustomField>