force-app/main/default/objects/Dealer_GST__c/fields/Item_group__c.field-meta.xml
<CustomField>
    <fullName>Item_group__c</fullName>
    <label>Item group</label>
    <length>150</length>
    <type>Text</type>
</CustomField>