force-app/main/default/objects/Dealer_GST__c/fields/Item_name__c.field-meta.xml
<CustomField>
    <fullName>Item_name__c</fullName>
    <label>Item name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>