force-app/main/default/objects/Dealer_GST__c/fields/Item_rate_Exshowroom_price__c.field-meta.xml
<CustomField>
    <fullName>Item_rate_Exshowroom_price__c</fullName>
    <label>Item rate/ Exshowroom price</label>
    <length>150</length>
    <type>Text</type>
</CustomField>