force-app/main/default/objects/Dealer_GST__c/fields/Item_Unit_Of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Item_Unit_Of_Measurement__c</fullName>
    <label>Item Unit Of Measurement</label>
    <length>150</length>
    <type>Text</type>
</CustomField>