force-app/main/default/objects/Dealer_GST__c/fields/Job_date__c.field-meta.xml
<CustomField>
    <fullName>Job_date__c</fullName>
    <label>Job date</label>
    <type>Date</type>
</CustomField>