force-app/main/default/objects/Dealer_GST__c/fields/Job_id__c.field-meta.xml
<CustomField>
    <fullName>Job_id__c</fullName>
    <label>Job id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>