force-app/main/default/objects/Dealer_GST__c/fields/My_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>My_GSTIN__c</fullName>
    <label>My GSTIN</label>
    <length>150</length>
    <type>Text</type>
</CustomField>