force-app/main/default/objects/Dealer_GST__c/fields/Part_Category__c.field-meta.xml
<CustomField>
    <fullName>Part_Category__c</fullName>
    <label>Part Category</label>
    <length>150</length>
    <type>Text</type>
</CustomField>