force-app/main/default/objects/Dealer_GST__c/fields/Sales_Discount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Discount__c</fullName>
    <label>Sales Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>