force-app/main/default/objects/Dealer_GST__c/fields/Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice__c</fullName>
    <label>Sales Invoice</label>
    <length>150</length>
    <type>Text</type>
</CustomField>