force-app/main/default/objects/Dealer_GST__c/fields/Sales_person__c.field-meta.xml
<CustomField>
    <fullName>Sales_person__c</fullName>
    <label>Sales person</label>
    <length>150</length>
    <type>Text</type>
</CustomField>