force-app/main/default/objects/Dealer_GST__c/fields/Service_accounting_codes__c.field-meta.xml
<CustomField>
    <fullName>Service_accounting_codes__c</fullName>
    <label>Service accounting codes</label>
    <length>150</length>
    <type>Text</type>
</CustomField>