force-app/main/default/objects/Dealer_GST__c/fields/SGST_amount__c.field-meta.xml
<CustomField>
    <fullName>SGST_amount__c</fullName>
    <label>SGST amount</label>
    <length>150</length>
    <type>Text</type>
</CustomField>