force-app/main/default/objects/Dealer_GST__c/fields/State_Cess_amount__c.field-meta.xml
<CustomField>
    <fullName>State_Cess_amount__c</fullName>
    <label>State Cess amount</label>
    <length>150</length>
    <type>Text</type>
</CustomField>