force-app/main/default/objects/Dealer_GST__c/fields/State_Cess_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>State_Cess_Tax_Rate__c</fullName>
    <label>State Cess Tax Rate</label>
    <length>150</length>
    <type>Text</type>
</CustomField>