force-app/main/default/objects/Dealer_GST__c/fields/State_Place_Of_Supply__c.field-meta.xml
<CustomField>
    <fullName>State_Place_Of_Supply__c</fullName>
    <label>State Place Of Supply</label>
    <length>150</length>
    <type>Text</type>
</CustomField>