force-app/main/default/objects/Dealer_GST__c/fields/Subscription_Model__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Model__c</fullName>
    <label>Subscription Model</label>
    <length>150</length>
    <type>Text</type>
</CustomField>