force-app/main/default/objects/Dealer_GST__c/fields/Subscription_Partner_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Partner_GSTIN__c</fullName>
    <label>Subscription Partner GSTIN</label>
    <length>150</length>
    <type>Text</type>
</CustomField>