force-app/main/default/objects/Dealer_GST__c/fields/Tax_direction__c.field-meta.xml
<CustomField>
    <fullName>Tax_direction__c</fullName>
    <label>Tax direction</label>
    <length>150</length>
    <type>Text</type>
</CustomField>