force-app/main/default/objects/Dealer_GST__c/fields/Tax_rate_CGST__c.field-meta.xml
<CustomField>
    <fullName>Tax_rate_CGST__c</fullName>
    <label>Tax rate CGST</label>
    <length>150</length>
    <type>Text</type>
</CustomField>