force-app/main/default/objects/Dealer_GST__c/fields/Taxable_value__c.field-meta.xml
<CustomField>
    <fullName>Taxable_value__c</fullName>
    <label>Taxable value</label>
    <length>150</length>
    <type>Text</type>
</CustomField>