force-app/main/default/objects/Dealer_GST__c/fields/Total_invoice_value__c.field-meta.xml
<CustomField>
    <fullName>Total_invoice_value__c</fullName>
    <label>Total invoice value</label>
    <length>150</length>
    <type>Text</type>
</CustomField>