force-app/main/default/objects/Dealer_GST__c/fields/Tour_Rental_flag__c.field-meta.xml
<CustomField>
    <fullName>Tour_Rental_flag__c</fullName>
    <label>Tour/Rental flag</label>
    <length>150</length>
    <type>Text</type>
</CustomField>